# 3rs-orbit

./: Cargo.toml  config.toml  test.toml
src/: consts.rs  lib.rs  main.rs  wasm.rs
src/args/: mod.rs
src/config/: ext.rs  mod.rs  serializers.rs
src/physics/: lighting.rs  mod.rs
web/: index.html  index.js
