[package]
name = "threed-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
rusttype = "0.9.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_toml = "0.0.1"
three-d = { git = "https://github.com/asny/three-d.git", version = "0.18.0", features = ["text"] }
three-d-asset = "0.7.0"
toml = "0.8.19"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["HtmlInputElement", "File", "FileList", "FileReader"] }
# tokio = { version = "1.40.0", features = ["rt", "macros" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anstyle = "1.0.9"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "macros", "rt-multi-thread"] }
